--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "sequelize": "^6.4.0",
-    "sqlite": "4.0.1"
+    "sqlite": "4.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
