Login and new request

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_USERNAME=Emmanuel
 DB_PASSWORD=Emman0099012
 DB_NAME=myapp
 JWT_SECRET=somereallylongsecret
+JWT_REFRESHSECRET=againsomereallylongsecret
