--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7",
     "sequelize": "^6.4.0",
     "sqlite": "4.0.1",
