--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
-DB_HOST=localhost
-DB_USERNAME=Emmanuel
+DB_HOST=127.0.0.1
+DB_USERNAME=root
 DB_PASSWORD=Emman0099012
 DB_NAME=myapp
 JWT_SECRET=somereallylongsecret
