--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_NAME=myapp
 JWT_SECRET=somereallylongsecret
 JWT_REFRESHSECRET=againsomereallylongsecret
 PORT=4000
+STRIPE_SK=sk_test_4eC39HqLyjWDarjtT1zdp7dc
