--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7",
+    "querystring": "^0.2.1",
     "sequelize": "^6.4.0",
     "sqlite": "4.0.1",
+    "stripe": "^8.137.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
