--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql": "^16.6.0",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.4.17",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.22",
     "querystring": "^0.2.1",
     "sequelize": "^6.4.0",
     "sqlite": "4.0.1",
