--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "migrate": " sequelize db:migrate",
     "dev": "nodemon src/index.js",
-    "start": "nodemon src/index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index"
   },
   "author": "",
   "license": "ISC",
