--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myappbackend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "migrate": " sequelize db:migrate",
     "dev": "nodemon src/index.js",
