Revert "updated env"
This reverts commit dcda777eee1f0ffc37099e94899a9d3b98f72c3f.

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
-DB_HOST=database-1.cwixvtlqqegj.eu-north-1.rds.amazonaws.com
+DB_HOST=driven.cixopu6bar8u.us-east-2.rds.amazonaws.com
 DB_USERNAME=admin
-DB_PASSWORD='#Manny3000'
+DB_PASSWORD=Emman0099012
 DB_NAME=myapp
 JWT_SECRET=somereallylongsecret
 JWT_REFRESHSECRET=againsomereallylongsecret
