--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "migrate": " sequelize db:migrate",
     "dev": "nodemon src/index.js",
-    "start": "nodemon src/index",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "start": "nodemon src/index"
   },
   "author": "",
   "license": "ISC",
