--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 NODE_ENV=development
-DB_HOST=driven.cixopu6bar8u.us-east-2.rds.amazonaws.com
+DB_HOST=database-1.cwixvtlqqegj.eu-north-1.rds.amazonaws.com
 DB_USERNAME=admin
 DB_PASSWORD=Emman0099012
 DB_NAME=myapp
 JWT_SECRET=somereallylongsecret
 JWT_REFRESHSECRET=againsomereallylongsecret
-PORT=3306
+PORT=3307
 STRIPE_SK=sk_test_4eC39HqLyjWDarjtT1zdp7dc
 DIALECT=mysql
